// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Basic 1`] = `
<div class="ui-example-child ui-example-child-single-component">
  <p>当前值：1000</p>
  <div class="container">
    <div class="ui-ruler"><canvas class="ui-ruler-canvas"></canvas>
      <div class="ui-ruler-cursor"></div>
      <div class="ui-ruler-arrow"></div>
    </div>
  </div>
</div>
`;

exports[`Radio List 1`] = `
<div class="ui-example-child ui-example-child-single-component">
  <p>当前值：1300</p>
  <div class="container">
    <div class="ui-ruler"><canvas class="ui-ruler-canvas"></canvas>
      <div class="ui-ruler-cursor"></div>
      <div class="ui-ruler-arrow"></div>
    </div>
  </div>
</div>
`;

exports[`Radio With Field 1`] = `
<div class="ui-example-child ui-example-child-single-component">
  <p>当前值：1305</p>
  <div class="container">
    <div class="ui-ruler"><canvas class="ui-ruler-canvas"></canvas>
      <div class="ui-ruler-cursor"></div>
      <div class="ui-ruler-arrow"></div>
    </div>
  </div>
</div>
`;
